# ashare-ai-trader

./: .gitignore  Makefile  README.md  docker-compose.yml
backend/: .env.example  Dockerfile.dev  README.md  package-lock.json  package.json  pyproject.toml
backend/app/: __main__.py  bootstrap.py  config.py  db.py  import_io.py  import_service.py  main.py  market.py  market_prices.py  models.py  quote_client.py  repositories.py  schemas.py  seed_data.py  services.py  time_utils.py  trade_execution.py  trading_calendar.py  user_service.py
backend/data/: ashare_ai_trader.db
backend/devtools/: __init__.py  rebuild_derived_data.py  restore_test_user.py  safety.py  sample_account.py  schema.py  test_user_seed.py
backend/prisma/: dev.db  schema.prisma
backend/src/: execution-engine.ts  import-parser.ts  import-template.ts  market.ts  order-reservation.ts  pnl-service.ts  quote-store.ts  repository.ts  seed-data.ts  server.ts  tencent.ts  types.ts
backend/tests/: conftest.py  helpers.py  support.py  test_backend_flow.py  test_closed_positions_api.py  test_database_config.py  test_import_flow.py  test_operation_entry_api.py  test_pnl_consistency.py  test_position_detail_api.py  test_quote_client.py  test_schema_tools.py  test_smoke_e2e.py  test_support_seed.py  test_trade_execution.py  test_trading_calendar.py  test_user_api.py
docs/: TODO.md  database-decoupling-and-ingestion.md  docker-postgres-setup.md  sim-trading-architecture.md  user-positions-and-operations-api.md
frontend/: Dockerfile.dev  index.html  package-lock.json  package.json  vite.config.ts
(+24 files in other folders)
